--- a/package.json
+++ b/package.json
@@ -2,32 +2,45 @@
   "name": "pet-finder",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0",
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.2.1",
-    "@testing-library/user-event": "^12.0.2",
-    "@types/jest": "^25.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "framer-motion": "^4.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^3.0.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.3.5",
-    "web-vitals": "^0.2.2"
-  },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "rimraf build",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "postbuild": "react-snap",
+    "test": "react-scripts test",
+    "serve": "serve -s build -l 4000"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "express": "^4.18.1",
+    "prettier": "^2.6.2",
+    "react-snap": "^1.23.0",
+    "rimraf": "^3.0.2",
+    "serve": "^13.0.2"
+  },
+  "dependencies": {
+    "@chakra-ui/react": "^2.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@petfinder/petfinder-js": "^1.0.6",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^17.0.32",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
+    "country-state-city": "^3.0.1",
+    "framer-motion": "^6.3.3",
+    "react": "^18.1.0",
+    "react-datalist-input": "^3.0.6",
+    "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.2",
+    "react-icons": "^4.3.1",
+    "react-qr-code": "^2.0.7",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.3.5",
+    "web-vitals": "^2.1.4"
   },
   "browserslist": {
     "production": [
