--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "country-state-city": "^3.0.1",
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
+    "react-card-flip": "^1.1.5",
     "react-datalist-input": "^3.0.6",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
