--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@types/react-dom": "^18.0.3",
     "country-state-city": "^3.0.1",
     "framer-motion": "^6.3.3",
+    "qrcode.react": "^3.0.2",
     "react": "^18.1.0",
     "react-card-flip": "^1.1.5",
     "react-datalist-input": "^3.0.6",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
     "react-icons": "^4.3.1",
-    "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.3.5",
